project:  image path issue resolved

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="shape"></div>
         <div class="navbar">
-            <a href="#" class="logo"><img src="../images/logo.png" alt="logo" class="logo"></a>
+            <a href="#" class="logo"><img src="./images/logo.png" alt="logo" class="logo"></a>
             <nav>
                 <ul role="list" class="navbar-items">
                     <li><a href="#">Home</a></li>
@@ -34,12 +34,12 @@
             </div>
 
             <div class="content-picture">
-                <img src="../images/blue_pepsi.png" alt="pepsi" class="pepsi">
+                <img src="./images/blue_pepsi.png" alt="pepsi" class="pepsi">
                 <div class="socials">
                     <ul class="social-media">
-                        <li><img src="../images/facebook.png" alt=""></li>
-                        <li><img src="../images/twitter.png" alt=""></li>
-                        <li><img src="../images/instagram.png" alt=""></li>
+                        <li><img src="./images/facebook.png" alt=""></li>
+                        <li><img src="./images/twitter.png" alt=""></li>
+                        <li><img src="./images/instagram.png" alt=""></li>
                     </ul>
                 </div>
             </div>
@@ -47,9 +47,9 @@
 
         <div class="thumb">
             <ul class="product-gallery">
-                <li><img src="../images/blue_pepsi.png" onclick="imgSlide('../images/blue_pepsi.png');changeColors('#004b93')"></li>
-                <li><img src="../images/silver_pepsi.png" onclick="imgSlide('../images/silver_pepsi.png');changeColors('#c3c7c7')"></li>
-                <li><img src="../images/black_pepsi.png" onclick="imgSlide('../images/black_pepsi.png');changeColors('black')"></li>
+                <li><img src="./images/blue_pepsi.png" onclick="imgSlide('./images/blue_pepsi.png');changeColors('#004b93')"></li>
+                <li><img src="./images/silver_pepsi.png" onclick="imgSlide('./images/silver_pepsi.png');changeColors('#c3c7c7')"></li>
+                <li><img src="./images/black_pepsi.png" onclick="imgSlide('./images/black_pepsi.png');changeColors('black')"></li>
             </ul>
         </div>
 
