--- a/main.html
+++ b/main.html
@@ -27,8 +27,7 @@
                 <h2 class="product-header">It's not just a drink<br>
                     it's <span>Pepsi!</span>
                 </h2>
-                <p class="product-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum mollitia facere nisi quia aut soluta, eligendi totam enim assumenda in ipsum temporibus eaque, provident repellat officia quae quidem adipisci sit?
-                 et nobis aliquam ab velit optio neque eaque rerum quibusdam obcaecati, ipsum dolore veniam? Id dignissimos error quidem, possimus a ullam.
+                <p class="product-des">Welcome to the official Pepsi website, where taste meets refreshment! Dive into a world of iconic flavors and discover the latest innovations from the global leader in beverages. Explore our diverse lineup of carbonated classics like Pepsi and Mountain Dew, or savor the bold choices offered by our PepsiCo family. 
             </p>
             <button class="learn-more">learn more</button>
             </div>
